--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -8,24 +8,26 @@
   - src/css/**/*
 "@lib":
   - src/lib/**/*
-"@copperDicomLoader":
-  - src/Loader/copperDicomLoader.ts
-"@copperGltfLoader":
-  - src/Loader/copperGltfLoader.ts
-"@copperNrrdLoader":
-  - src/Loader/copperNrrdLoader.ts
-"@copperOBJLoader":
-  - src/Loader/copperOBJLoader.ts
-"@copperVtkLoader":
-  - src/Loader/copperVtkLoader.ts
+"@loader":
+  - src/Loader/**/*
+# "@copperDicomLoader":
+#   - src/Loader/copperDicomLoader.ts
+# "@copperGltfLoader":
+#   - src/Loader/copperGltfLoader.ts
+# "@copperNrrdLoader":
+#   - src/Loader/copperNrrdLoader.ts
+# "@copperOBJLoader":
+#   - src/Loader/copperOBJLoader.ts
+# "@copperVtkLoader":
+#   - src/Loader/copperVtkLoader.ts
 "@Renderer":
   - src/Renderer/**/*
 "@Scene":
   - src/Scene/**/*
 "@Utils":
   - src/Utils/**/*
-"@Utils/nrrd_tools":
-  - src/Utils/nrrd_tools.ts
+# "@Utils/nrrd_tools":
+#   - src/Utils/nrrd_tools.ts
 "@eslint":
   - packages/eslint-config-custom/**/*
 "@stack":
