--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,33 +1,17 @@
-"@documentation":
-  - docs/source/**/*
-# "@controls":
-#   - src/Controls/**/*
-# "@core":
-#   - src/core/**/*
-# "@css":
-#   - src/css/**/*
-# "@lib":
-#   - src/lib/**/*
-# "@loader":
-#   - src/Loader/**/*
-# "@copperDicomLoader":
-#   - src/Loader/copperDicomLoader.ts
-# "@copperGltfLoader":
-#   - src/Loader/copperGltfLoader.ts
-# "@copperNrrdLoader":
-#   - src/Loader/copperNrrdLoader.ts
-# "@copperOBJLoader":
-#   - src/Loader/copperOBJLoader.ts
-# "@copperVtkLoader":
-#   - src/Loader/copperVtkLoader.ts
-# "@renderer":
-#   - src/Renderer/**/*
-# "@scene":
-#   - src/Scene/**/*
-# "@utils":
-#   - src/Utils/**/*
-# "@Utils/nrrd_tools":
-#   - src/Utils/nrrd_tools.ts
+"@backend":
+  - apps/backend/**/*
+"@customer":
+  - src/customer/**/*
+"@core":
+  - src/core/**/*
+"@service-provider":
+  - src/serviceprovider/**/*
+"@store-member":
+  - apps/storemember/**/*
+"@support-centre":
+  - apps/supportcentre/**/*
+"@api":
+  - packages/api/**/*
 "@eslint":
   - packages/eslint-config-custom/**/*
 "@stack":
