--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copper3d_visualisation",
+  "name": "copper3d",
   "description": "A 3d visualisation package base on threejs provides multiple scenes and Nrrd image load funtion.",
   "version": "1.14.10",
   "main": "dist/bundle.umd.js",
@@ -18,6 +18,7 @@
     "url": "git+https://github.com/LinkunGao/copper3d_visualisation.git"
   },
   "keywords": [
+    "copper3d",
     "3d visualization",
     "threejs",
     "multiple scenes",
