--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+cache
+
 # Runtime data
 pids
 *.pid
