--- a/.github/workflows/deploy-api-docs.yaml
+++ b/.github/workflows/deploy-api-docs.yaml
@@ -62,30 +62,19 @@ jobs:
   # Deployment job
 
   deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+    name: Deploy
     needs: build
     runs-on: ubuntu-latest
-    name: Deploy
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2
-  # deploy:
-  #   name: Deploy
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
 
-  #   steps:
-  #     - name: Download artifact
-  #       uses: actions/download-artifact@v3
-  #       with:
-  #         name: production-files
-  #         path: ./apidocs/.vitepress/dist
-  #     - name: Deploy to Github Pages
-  #       uses: peaceiris/actions-gh-pages@v3
-  #       with:
-  #         github_token: ${{secrets.COPPER3D_GITHUB_TOKEN}}
-  #         publish_dir: ./apidocs/.vitepress/dist
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: production-files
+          path: ./apidocs/.vitepress/dist
+      - name: Deploy to Github Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{secrets.COPPER3D_GITHUB_TOKEN}}
+          publish_dir: ./apidocs/.vitepress/dist
