update vitpress docs config, the docs generated by typedoc cannot be called dist, need use another name.

--- a/.github/workflows/deploy-api-docs.yaml
+++ b/.github/workflows/deploy-api-docs.yaml
@@ -54,7 +54,7 @@ jobs:
           cd apidocs/
           npm run docs:build 
           touch .vitepress/dist/.nojekyll
-          cp -r dist/ .vitepress/dist/
+        # cp -r dist/ .vitepress/dist/
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
