--- a/.github/workflows/algolia.yaml
+++ b/.github/workflows/algolia.yaml
@@ -12,7 +12,9 @@ jobs:
         run: cd apidocs
       - name: Get the content of algolia.json as config
         id: algolia_config
-        run: echo "config=$(cat crawlerConfig.json | jq -r tostring)" >> $GITHUB_OUTPUT
+        run: |
+          cd apidocs/
+          echo "config=$(cat crawlerConfig.json | jq -r tostring)" >> $GITHUB_OUTPUT
       - name: Push indices to Algolia
         uses: signcl/docsearch-scraper-action@master
         env:
