update algolia action

--- a/.github/workflows/algolia.yaml
+++ b/.github/workflows/algolia.yaml
@@ -13,6 +13,7 @@ jobs:
       - name: Get the content of algolia.json as config
         id: algolia_config
         run: |
+          pwd
           cd apidocs/
           echo "config=$(cat crawlerConfig.json | jq -r tostring)" >> $GITHUB_OUTPUT
       - name: Push indices to Algolia
