--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -9,17 +9,20 @@ on:
 
 jobs:
   publish-npm:
-    name: publish
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      id-token: write 
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
         with:
-          node-version: 16
+          node-version: 20
           registry-url: https://registry.npmjs.org/
 
-      - run: npm ci --ignore-scripts
+      - run: npm ci
       - run: npm run build
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.COOPER3D_NPM_TOKEN}}
+      - run: npm publish --provenance
